<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#070707"
    android:orientation="vertical">

    <ImageView
        android:layout_width="279dp"
        android:layout_height="145dp"
        android:id="@+id/imageView3"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TVUserName"
        android:id="@+id/tvUserName"
        android:autoText="false"
        android:textColor="#fffc1e"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:layout_gravity="bottom" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:id="@+id/TFUserName"
        android:textColor="#030104"
        android:layout_below="@+id/tvUserNameTxt"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:background="#06ff0d" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TVUserPassword"
        android:id="@+id/tvUserPass"
        android:textColor="#fffc1e"
        android:layout_below="@+id/TFUserName"
        android:layout_alignParentLeft="true"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/TFPass1"
        android:textColor="#030104"
        android:layout_below="@+id/tvUserPasswordTxt"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:background="#06ff0d" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TVUserPasswordConfirmed"
        android:id="@+id/textView2"
        android:textColor="#fffc1e"
        android:layout_below="@+id/TFUserName"
        android:layout_alignParentLeft="true"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/TFPass2"
        android:textColor="#030104"
        android:layout_below="@+id/tvUserPasswordTxt"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:background="#06ff0d" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TVUserGroup"
        android:id="@+id/textView"
        android:textColor="#fffc1e"
        android:layout_below="@+id/TFUserName"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:layout_gravity="right" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="68dp"
        android:id="@+id/spinLocCategory"
        android:layout_below="@+id/tvSpinner"
        android:layout_alignParentLeft="true"
        android:background="#06ff0d" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btregister"
        android:id="@+id/btRegisterGo"
        android:onClick="OnRegisterBtClick" />

</LinearLayout>
