<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#070707"
    android:id="@+id/RegisterActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TVUserName"
        android:id="@+id/tvUserNameTxt"
        android:autoText="false"
        android:textColor="#fffc1e"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:id="@+id/TFUserName"
        android:layout_below="@+id/tvUserNameTxt"
        android:layout_alignParentLeft="true"
        android:textColor="#030104"
        android:textStyle="bold"
        android:background="#06ff0d" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TVUserPassword"
        android:id="@+id/tvUserPasswordTxt"
        android:textColor="#fffc1e"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TFUserName"
        android:textStyle="bold" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/TFUserPassword"
        android:textColor="#040104"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:singleLine="false"
        android:background="#06ff0d"
        android:layout_below="@+id/tvUserPasswordTxt" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btlogin"
        android:id="@+id/btLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:onClick="OnLoginBtClick"
        android:layout_alignTop="@+id/btRegister" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btregister"
        android:id="@+id/btRegister"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onRegisterClick" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/imageView2"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
